force-app/main/default/objects/SPEN_LP_Apparatus__c/SPEN_LP_Apparatus__c.object-meta.xml
<CustomObject>
    <label>Land &amp; Planning Apparatus</label>
    <nameField>
        <label>Apparatus</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land &amp; Planning Apparatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>