force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_Contracting_Reference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contracting_Reference__c</fullName>
    <description>Used in the referencing on documents generated from Salesforce as the Name field does not allow for apparatus descriptions longer than 80 characters</description>
    <inlineHelpText>Used in the referencing on documents generated from Salesforce as the Name field does not allow for apparatus descriptions longer than 80 characters</inlineHelpText>
    <label>Contracting Reference</label>
    <length>150</length>
    <type>Text</type>
</CustomField>