force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_Owner_Cost_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Owner_Cost_Per_Annum__c</fullName>
    <label>Owner Cost Per Annum</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>