force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_Owner_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Owner_SAP_Code__c</fullName>
    <label>Owner SAP Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>