force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_Payment_Rate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Payment_Rate__c</fullName>
    <label>Payment Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Occupier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>