force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_RentalOnly__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RentalOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for ESC-1699</description>
    <label>Rental Only</label>
    <type>Checkbox</type>
</CustomField>