force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Sequence__c</fullName>
    <label>Sequence #</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>