force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_SPDSPT__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SPDSPT__c</fullName>
    <formula>IF(  ISPICKVAL(Licence_Area__c , &apos;SPD&apos;) , true,  IF(  ISPICKVAL(Licence_Area__c , &apos;SPT&apos;) , true, false ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPD &amp; SPT</label>
    <type>Checkbox</type>
</CustomField>