force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_SPM__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPM</label>
    <type>Checkbox</type>
</CustomField>