force-app/main/default/objects/SPEN_LP_Apparatus__c/fields/SPEN_SPT__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SPT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPT</label>
    <type>Checkbox</type>
</CustomField>